welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:27: error: ')' expected but 'if' found.
    if (color==false){recule(); gauche()}
    ^