welcome.lessons.welcome.methods.slug.SlugTracking.scala.code

def isFacingTrail():Boolean = {
  var reponse = false
  
  while (!estSurBiscuit){
   		testCroix()
    
  }
  reponse=true
  return reponse
  
    // Write your code here
}






def testCroix(){
  var color = false
  
  while (!color ){
    if (!estFaceMur() {avance()
                       if (getCouleurSol()==Color.green){color = true}}
    if (color==false){recule(); gauche()}
    else if (color){recule()}
  
      
  }
  if (color){baisseBrosse; avance() }
}
